<resources>
    <string name="app_name">FineArtWebshop</string>
    <string name="title_home">HOME</string>
    <string name="title_shop">SHOP</string>
    <string name="title_profile">PROFILE</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LOGIN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password again</string>
    <string name="action_sign_in">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="switch_to_login">Already have an account? Login</string>
    <string name="switch_to_register">Don\'t have an account? Register</string>
    <string name="login_btn">Login</string>
    <string name="register_title">REGISTER</string>
    <string name="shop_text">WELCOME TO THE SHOP</string>
    <string name="home_text">HOME PAGE</string>
    <string name="profile_text">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>